--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
-.App {
+/* Select all CSS */
+* {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+  font-weight: 400;
+}
+
+/* Header CSS */
+.header {
+  display: flex;
+  justify-content: space-between;
+  height: 10vh;
+  width: auto;
+  /* background-color: rgb(1, 163, 144); */
+  border-radius: 5px;
+  box-shadow: -1px 4px 20px 14px rgba(0, 0, 0, 0.2);
+  color: black;
+  font-weight: bold;
+  align-items: center;
+}
+.logo-heading {
+  margin: 0 20px;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.logo {
+  padding-left: 10px;
+  width: 100px;
+}
+
+.nav-items {
+  padding: 0 10px 0;
+  width: auto;
+}
+
+.nav-items > ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.nav-items > ul > li {
+  margin: 0 20px;
+  font-size: large;
+  cursor: pointer;
+}
+
+/* Body CSS */
+
+.restaurant-list {
+  width: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  width: 20%;
+  margin: 20px;
+  cursor: pointer;
+  box-shadow: -1px 4px 20px 14px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+.card:hover {
+  
+}
+
+.card-text {
+  padding: 10px 10px;
+}
+.card > img {
+  width: 100%;
+  border: 1px solid #fff;
+}
+
+.card > span {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card > span > h4 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card > span > h4:first-child {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: rgb(19, 176, 1);
+  border-radius: 5px;
+  padding: 0 5px 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card > span > h4:first-child .fa-star {
+  font-size: small;
+  padding: 0 5px 3px 0;
+}
+.mg-10{
+  margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* footer CSS */
+.footer {
+  margin: 0;
+  color: white;
+  font-size: 0.8rem;
+  width: auto;
+  text-align: center;
+  background-color: black;
+  padding: 20px 10px 20px;
+  /* box-shadow: -1px 4px 20px 14px rgba(0, 0, 0, 0.2); */
+}
+
+.footer > i {
+  padding: 0 5px 0;
+  font-size: smaller;
+}
+
+.fa-heart {
+  /* color: darkred; */
+}
+
+.footer > strong {
+  padding-left: 5px;
+}
+
+.no-style{
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+}
+.search-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.search-container .search-input {
+  width: 40%;
+  box-sizing: border-box;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+  padding: 14px 15px 14px 20px;
+  border: 1px solid #aabcca;
+  border-right: 0;
+  color: #000000;
+  outline: none;
+}
+
+.search-container .search-btn {
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: #c26100;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+  color: #ffffff;
+  padding: 15px 22px;
+  margin-left: -4px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+.search-container .search-btn:hover {
+  background-color: #016034;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .card {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  .nav-items{
+    display: none;
   }
 }
